# bl808_coprocessor

./: .gitignore  README.md
apps/test/: CMakeCache.txt  CMakeLists.txt  Makefile
apps/test/include/: FreeRTOSConfig.h
apps/test/src/: main.c
cmake/: extensions.cmake  kconfig.cmake  top.cmake
common/ipc/: CMakeLists.txt
common/ipc/include/: ipc.h  rpmsg_config.h
common/ipc/src/: bl808_ipc.c  ipc.c
common/rpmsg-lite/: CMakeLists.txt
common/rpmsg-lite/include/: rpmsg_compiler.h  rpmsg_env.h
common/rpmsg-lite/include/platform/bl808/: rpmsg_platform.h
common/rpmsg-lite/rpmsg_lite/: rpmsg_lite.c
common/rpmsg-lite/rpmsg_lite/porting/environment/: rpmsg_env_freertos.c
common/rpmsg-lite/rpmsg_lite/porting/platform/bl808/: rpmsg_platform.c
common/rpmsg-lite/virtio/: virtqueue.c
components/: CMakeLists.txt
components/ipc/: CMakeLists.txt
components/ipc/include/: ipc.h  ipc_irq.h
components/ipc/src/: ipc.c  ipc_irq.c
components/rpmsg-lite/include/: rpmsg_compiler.h  rpmsg_default_config.h
components/rpmsg-lite/include/platform/bl808/: rpmsg_platform.h
components/rpmsg-lite/rpmsg_lite/: rpmsg_lite.c
components/rpmsg-lite/rpmsg_lite/porting/environment/: rpmsg_env_bm.c
components/rpmsg-lite/rpmsg_lite/porting/platform/bl808/: rpmsg_platform.c
components/rpmsg-lite/virtio/: virtqueue.c
d0/: .gdbinit  CMakeLists.txt  Makefile  bl808_flash_d0.ld  cmake_install.cmake  proj.conf
d0/include/: FreeRTOSConfig.h
d0/src/: main.c
d0_lowload/: CMakeLists.txt  bl808_flash_d0.ld.old  main.c  proj.conf
m0/: CMakeLists.txt  Makefile  bl808_flash_m0.ld  proj.conf
m0/include/: console.h  ipc.h  partition.h  usb_config.h  usb_dfu.h  usb_uart.h  usbd_dfu.h
m0/src/: console.c  flash.c  ipc.c  main.c  partition.c  softcrc.c  usb_descriptors.c  usbd_dfu.c
m0/src/cmd/: CMakeLists.txt  cmd_d0.c  cmd_d0.h  cmd_ipc.c  cmd_ipc.h  cmd_memory.c  cmd_memory.h  cmd_sensors.c  cmd_sensors.h  cmd_system.c  cmd_system.h
scripts/kconfig/: hardenconfig.py  kconfig.py  kconfigfunctions.py  lint.py
